--- a/help/index.html
+++ b/help/index.html
@@ -5,16 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/global.css" />
-		<title>Document</title>
+		<title>Projekttitel</title>
 	</head>
 	<body>
 		<nav>
 			<h1>Projekttitel</h1>
-			<a href="/help">Help</a>
+			<a href="/">About</a>
 			<a href="/">Home</a>
 		</nav>
 		<article>
-			<h2>About</h2>
+			<h2>Help</h2>
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
 				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
