About page nearly finished.

--- a/about/index.html
+++ b/about/index.html
@@ -9,30 +9,92 @@
 	</head>
 	<body>
 		<nav>
-			<h1>Projekttitel</h1>
-			<a href="/help">Help</a>
-			<a href="/">Home</a>
+			<a href="/"><h1>Projekttitel</h1></a>
+			<a class="warmth" href="/about">Om Oss</a>
+			<a href="/faq">FAQ</a>
 		</nav>
 		<article>
-			<h2>About</h2>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
-				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
-				repudiandae dolorum quod. Exercitationem, modi. Ut, placeat? Architecto
-				at maiores enim tempore.
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
-				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
-				repudiandae dolorum quod. Exercitationem, modi. Ut, placeat? Architecto
-				at maiores enim tempore.
-			</p>
-			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
-				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
-				repudiandae dolorum quod. Exercitationem, modi. Ut, placeat? Architecto
-				at maiores enim tempore.
-			</p>
+			<h2>Om Oss</h2>
+
+			<p>Vi som ligger bakom projektet är:</p>
+			<br />
+			<ul>
+				<li><b class="creators">Namn:</b> Alice Persdotter Rydberg</li>
+				<li><b class="creators">Utbildning:</b> Game Creator Artist</li>
+				<li>
+					<b class="creators">Kontaktuppgifter:</b> alicepersdotter@gmail.com
+				</li>
+				<li>
+					<b class="creators">Vad vi bidragit med i projektet:</b> Tillverka
+					grafik väl anpassad för en realtidsapplikation på webben.
+				</li>
+				<li>
+					<b class="creators">Länkar:</b>
+				</li>
+			</ul>
+			<br />
+			<ul>
+				<li><b class="creators">Namn:</b> Dante Mogrim</li>
+				<li><b class="creators">Utbildning:</b> Webbutvecklare</li>
+				<li><b class="creators">Kontaktuppgifter:</b> 1991.mogrim@gmail.com</li>
+				<li>
+					<b class="creators">Vad vi bidragit med i projektet:</b> Möjliggöra
+					att bidraget kan existera på webben + arbeta med interaktivitet och
+					implementation.
+				</li>
+				<li>
+					<b class="creators">Länkar:</b> www.mogrim.se +
+					https://github.com/dantemogrim
+				</li>
+			</ul>
+			<br />
+			<ul>
+				<li><b class="creators">Namn:</b> Emma Malinsdotter</li>
+				<li><b class="creators">Utbildning:</b> Manusförfattare</li>
+				<li>
+					<b class="creators">Kontaktuppgifter:</b>
+					emma.malinsdotter@outlook.com
+				</li>
+				<li>
+					<b class="creators"> Vad vi bidragit med i projektet:</b> Leda arbetet
+					med att utveckla story utifrån gruppens koncept
+				</li>
+				<li>
+					<b class="creators">Länkar:</b>
+				</li>
+			</ul>
+			<br />
+			<ul>
+				<li><b class="creators">Namn:</b> Frida Holmer</li>
+				<li><b class="creators">Utbildning:</b> UX Designer</li>
+				<li>
+					<b class="creators">Kontaktuppgifter:</b> frida.holmer@hotmail.com
+				</li>
+				<li>
+					<b class="creators">Vad vi bidragit med i projektet:</b> Leda
+					idégenerering och designprocess, säkerställa att webbplats och bidrag
+					är lätta att använda/uppleva.
+				</li>
+				<li>
+					<b class="creators">Länkar:</b>
+				</li>
+			</ul>
+			<br />
+			<ul>
+				<li><b class="creators">Namn:</b> Linus Jonsson</li>
+				<li><b class="creators">Utbildning:</b> Game Creator Programmer</li>
+				<li>
+					<b class="creators">Kontaktuppgifter:</b> linus_jonsson@hotmail.com
+				</li>
+				<li>
+					<b class="creators"> Vad vi bidragit med i projektet:</b> Utveckla
+					interaktivitet och implementera tillverkade delar (så som ljud, grafik
+					etc).
+				</li>
+				<li>
+					<b class="creators">Länkar:</b> https://github.com/linus-jonsson
+				</li>
+			</ul>
 		</article>
 	</body>
 </html>
