--- a/faq/index.html
+++ b/faq/index.html
@@ -9,24 +9,26 @@
 	</head>
 	<body>
 		<nav>
-			<h1>Projekttitel</h1>
-			<a href="/">About</a>
-			<a href="/">Home</a>
+			<a href="/"><h1>Projekttitel</h1></a>
+			<a href="/about">Om Oss</a>
+			<a class="warmth" href="#">FAQ</a>
 		</nav>
 		<article>
-			<h2>Help</h2>
+			<h2>Frequently Asked Questions</h2>
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
 				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
 				repudiandae dolorum quod. Exercitationem, modi. Ut, placeat? Architecto
 				at maiores enim tempore.
 			</p>
+			<br />
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
 				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
 				repudiandae dolorum quod. Exercitationem, modi. Ut, placeat? Architecto
 				at maiores enim tempore.
 			</p>
+			<br />
 			<p>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam at
 				voluptatum delectus nulla, fugit tempore, quo laudantium numquam
