--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 	</head>
 	<body>
 		<nav>
-			<h1>Projekttitel</h1>
-			<a href="/about">About</a>
-			<a href="/help">Help</a>
-			<a href="#">Restart</a>
+			<a href="/"><h1>Projekttitel</h1></a>
+			<a href="/about">Om Oss</a>
+			<a href="/faq">FAQ</a>
 		</nav>
 
 		<div id="unity-container" class="unity-desktop">
@@ -31,6 +30,8 @@
 				<div id="unity-build-title"></div>
 			</div>
 		</div>
+
+		<!-- <button><a href="#">Restart</a></button> -->
 
 		<script>
 			const buildUrl = 'Build';
