--- a/faq/index.html
+++ b/faq/index.html
@@ -43,9 +43,8 @@
 			</p>
 			<br />
 			<p>
-				Detta är striktligen menat som ett skolprojekt vad gäller copyright.
-				Yrgo länk till 2021.
-				<a href="www.yrgo.se">Yrgo</a>
+				Detta är striktligen menat som ett skolprojekt där vi studerar på
+				<a href="www.yrgo.se">Yrgo</a>.
 			</p>
 		</article>
 	</body>
