Canvas blocked on mobile + tablet.

--- a/faq/index.html
+++ b/faq/index.html
@@ -17,10 +17,8 @@
 			<h2>FAQ</h2>
 			<h3>Hur spelar jag?</h3>
 			<p>
-				På förstasidan har du tillgång till spelet. För att komma igång, klicka
-				dig fram med hjälp av muspekaren. Kör du fast under spelets gång finns
-				det ett frågetecken i övre högra hörnet av spelytan som kan hjälpa dig
-				att komma vidare.
+				På förstasidan har du tillgång till spelet. För att spela, klicka dig
+				fram med hjälp av muspekaren.
 			</p>
 			<br />
 			<h3>Någonting som krånglar?</h3>
@@ -39,7 +37,9 @@
 				Räddningsmissionens viktiga arbete med att hjälpa människor som lever i
 				utsatthet. För mer information om hur just du kan bidra så kan du läsa
 				på mer om organisationens arbete på
-				<a href="www.raddningsmissionen.se">www.raddningsmissionen.se</a>.
+				<a href="https://raddningsmissionen.se/" target="_blank"
+					>Räddningsmissionens Hemsida</a
+				>.
 			</p>
 			<br />
 			<p>
