Hover on links + potential logo.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="/"><h1>Projekttitel</h1></a>
+			<a href="/"> <img src="medsmamedel.png" /></a>
 			<a href="/about">Om Oss</a>
 			<a href="/faq">FAQ</a>
 		</nav>
