Link and h1 fixes.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Unity WebGL Player | Sammanslaget</title>
-		<link rel="shortcut icon" href="TemplateData/favicon.ico" />
+		<title>Med Små Medel</title>
+		<!-- <link rel="shortcut icon" href="TemplateData/favicon.ico" /> -->
 		<link rel="stylesheet" href="TemplateData/style.css" />
 		<link rel="stylesheet" href="global.css" />
 	</head>
 	<body>
 		<nav>
-			<a href="/"> <img src="medsmamedel.png" /></a>
+			<a href="/"> <h1>Med Små Medel</h1></a>
 			<a href="/about">Om Oss</a>
 			<a href="/faq">FAQ</a>
 		</nav>
