--- a/about/index.html
+++ b/about/index.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/global.css" />
-		<title>Document</title>
+		<title>Med Små Medel</title>
 	</head>
 	<body>
 		<nav>
-			<a href="/"><h1>Projekttitel</h1></a>
+			<a href="/"><h1>Med Små Medel</h1></a>
 			<a class="warmth" href="/about">Om Oss</a>
 			<a href="/faq">FAQ</a>
 		</nav>
