--- a/faq/index.html
+++ b/faq/index.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/global.css" />
-		<title>Projekttitel</title>
+		<title>Med Små Medel</title>
 	</head>
 	<body>
 		<nav>
-			<a href="/"><h1>Projekttitel</h1></a>
+			<a href="/"><h1>Med Små Medel</h1></a>
 			<a href="/about">Om Oss</a>
 			<a class="warmth" href="#">FAQ</a>
 		</nav>
@@ -44,7 +44,7 @@
 			<br />
 			<p>
 				Detta är striktligen menat som ett skolprojekt där vi studerar på
-				<a href="www.yrgo.se">Yrgo</a>.
+				<a href="https://www.yrgo.se/" target="_blank">Yrgo</a>.
 			</p>
 		</article>
 	</body>
