--- a/faq/index.html
+++ b/faq/index.html
@@ -38,13 +38,14 @@
 				utsatthet. För mer information om hur just du kan bidra så kan du läsa
 				på mer om organisationens arbete på
 				<a href="https://raddningsmissionen.se/" target="_blank"
-					>Räddningsmissionens Hemsida</a
+					><u>Räddningsmissionens Hemsida</u></a
 				>.
 			</p>
 			<br />
 			<p>
 				Detta är striktligen menat som ett skolprojekt där vi studerar på
-				<a href="https://www.yrgo.se/" target="_blank">Yrgo</a>.
+				<a href="https://www.yrgo.se/" target="_blank"><u>Yrgo</u></a
+				>.
 			</p>
 		</article>
 	</body>
