--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Med små Medel</title>
 		<!-- <link rel="shortcut icon" href="TemplateData/favicon.ico" /> -->
+		<link rel="icon" type="image/svg+xml" href="favicon.png" />
 		<link rel="stylesheet" href="TemplateData/style.css" />
 		<link rel="stylesheet" href="global.css" />
 	</head>
