--- a/faq/index.html
+++ b/faq/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
-		<link rel="stylesheet" href="/global.css" />
+		<link rel="stylesheet" href="/assets/styles/global.css" />
 		<title>Med små Medel</title>
 	</head>
 	<body>
