--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Med små Medel</title>
-		<!-- <link rel="shortcut icon" href="TemplateData/favicon.ico" /> -->
 		<link rel="icon" type="image/svg+xml" href="favicon.png" />
-		<!-- <link rel="stylesheet" href="TemplateData/style.css" /> -->
-		<link rel="stylesheet" href="global.css" />
+		<link rel="stylesheet" href="/assets/styles/global.css" />
 	</head>
 	<body>
 		<nav>
