Yrgo link moved + moved favicon..

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+		<link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
 		<link rel="stylesheet" href="/assets/styles/global.css" />
 		<title>Med små Medel</title>
 	</head>
@@ -102,6 +102,12 @@
 					<b class="creators">Länkar:</b> https://github.com/linus-jonsson
 				</li>
 			</ul>
+			<br />
+			<p>
+				Detta är striktligen menat som ett skolprojekt där vi studerar på
+				<a href="https://www.yrgo.se/" target="_blank"><u>Yrgo</u></a
+				>.
+			</p>
 		</article>
 	</body>
 </html>
