--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Med små Medel</title>
-		<link rel="icon" type="image/svg+xml" href="favicon.png" />
+		<link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
 		<link rel="stylesheet" href="/assets/styles/global.css" />
 	</head>
 	<body>
