Dividing + cleaning up css.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>Med små Medel</title>
 		<link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
 		<link rel="stylesheet" href="/assets/styles/global.css" />
+		<link rel="stylesheet" href="/assets/styles/keyframes.css" />
+		<link rel="stylesheet" href="/assets/styles/queries.css" />
 	</head>
 	<body>
 		<nav>
