--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
 		<link rel="stylesheet" href="/assets/styles/global.css" />
+		<link rel="stylesheet" href="/assets/styles/queries.css" />
 		<title>Med små Medel</title>
 	</head>
 	<body>
