Surfplatta + canvas css.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<div id="unity-container" class="unity-desktop">
 			<canvas id="unity-canvas" width="1040" height="585"></canvas>
 			<div id="unity-loading-bar">
+				Laddar
 				<div id="unity-logo"></div>
 				<div id="unity-progress-bar-empty">
 					<div id="unity-progress-bar-full"></div>
