--- a/faq/index.html
+++ b/faq/index.html
@@ -7,6 +7,7 @@
 		<link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
 		<link rel="stylesheet" href="/assets/styles/global.css" />
 		<link rel="stylesheet" href="/assets/styles/queries.css" />
+		<link rel="stylesheet" href="/assets/styles/canvas.css" />
 		<title>Med små Medel</title>
 	</head>
 	<body>
@@ -31,7 +32,7 @@
 			<br />
 			<h3>Någonting som krånglar?</h3>
 			<p>
-				Försöker du spela via mobil eller läsplatta? Spelet är tyvärr bara
+				Försöker du spela via mobil eller surfplatta? Spelet är tyvärr bara
 				kompatibelt med datorskärmar.
 			</p>
 			<p>
