--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>Med små Medel</title>
 		<link rel="icon" type="image/svg+xml" href="/assets/favicon.png" />
+		<link rel="stylesheet" href="/assets/styles/canvas.css" />
 		<link rel="stylesheet" href="/assets/styles/global.css" />
 		<link rel="stylesheet" href="/assets/styles/keyframes.css" />
 		<link rel="stylesheet" href="/assets/styles/queries.css" />
@@ -21,8 +22,9 @@
 			<a href="/about">Om Oss</a>
 			<a href="/faq">FAQ</a>
 		</nav>
-		<div id="unity-container" class="unity-desktop">
-			<canvas id="unity-canvas" width="1040" height="585"></canvas>
+		<div class="wrapper">
+			<!-- <div id="unity-container" class="unity-desktop"> -->
+			<canvas id="unity-canvas"></canvas>
 			<div id="unity-loading-bar">
 				Laddar
 				<div id="unity-logo"></div>
@@ -38,6 +40,7 @@
 				<div id="unity-fullscreen-button"></div>
 				<div id="unity-build-title"> Sammanslaget </div>
 			</div> -->
+			<!-- </div> -->
 		</div>
 		<script src="/assets/scripts/main.js"></script>
 	</body>
