--- a/about/index.html
+++ b/about/index.html
@@ -33,11 +33,23 @@
 					<b class="creators">Kontaktuppgifter:</b> alicepersdotter@gmail.com
 				</li>
 				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> Tillverka
-					grafik väl anpassad för en realtidsapplikation på webben.
+					<b class="creators">Vad vi bidragit med i projektet:</b> Vad vi
+					bidragit med i projektet: I detta projektet hade jag rollen som
+					grafiker, en roll som gav mig ansvaret att utveckla ett grafiskt
+					uttryck och stil, samt att skapa själva grafiken. Utifrån gruppens
+					koncept och författarens manus skissade jag upp en storyboard för att
+					visualisera vårt kommande arbete. Med dessa ursprungliga skisser som
+					bas, skapade jag sedan de miljöer, karaktärer och andra element som
+					illustrerar “Med Små Medel”. Förutom mitt arbete med färg och form för
+					att stärka vårt budskap så har jag samarbetat med UX samt
+					programmerare för att få fram ett grafiskt uttryck som är både
+					funktionellt och tilltalande.
 				</li>
 				<li>
-					<b class="creators">Länkar:</b>
+					<b class="creators">Länkar: </b
+					><a href="https://www.artstation.com/itsnoonytime" target="_blank">
+						ArtStation</a
+					>
 				</li>
 			</ul>
 			<br />
@@ -46,13 +58,20 @@
 				<li><b class="creators">Utbildning:</b> Webbutvecklare</li>
 				<li><b class="creators">Kontaktuppgifter:</b> 1991.mogrim@gmail.com</li>
 				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> Möjliggöra
-					att bidraget kan existera på webben + arbeta med interaktivitet och
-					implementation.
+					<b class="creators">Vad vi bidragit med i projektet:</b> Jag har stått
+					för det innehållet som rör webben. Att vi har en about-sida där vi som
+					ligger bakom projektet har delat våra kontaktuppgifter. En faq-sida
+					dit användaren kan klicka in sig för att få svar på frågor kring
+					projektet. Allt vad gäller stylingen utanpå spelytan i form av
+					typsnitt, färg och form etc. Att projektet finns att tillgå på nätet.
+					Utöver min vanliga roll fick jag med min diktafon stå för inspelade
+					ljudmiljön som finns med i bakgrunden till spelet samt redigeringen av
+					dessa stycken.
 				</li>
 				<li>
-					<b class="creators">Länkar:</b> www.mogrim.se +
-					https://github.com/dantemogrim
+					<b class="creators">Länkar: </b
+					><a href="http://mogrim.se/" target="_blank">Domän</a> +
+					<a href="https://github.com/dantemogrim" target="_blank">GitHub</a>
 				</li>
 			</ul>
 			<br />
@@ -64,11 +83,9 @@
 					emma.malinsdotter@outlook.com
 				</li>
 				<li>
-					<b class="creators"> Vad vi bidragit med i projektet:</b> Leda arbetet
-					med att utveckla story utifrån gruppens koncept
-				</li>
-				<li>
-					<b class="creators">Länkar:</b>
+					<b class="creators"> Vad vi bidragit med i projektet:</b> Har skrivit
+					manus och fört arbetet med att utveckla storyn utifrån gruppens
+					koncept.
 				</li>
 			</ul>
 			<br />
@@ -79,12 +96,16 @@
 					<b class="creators">Kontaktuppgifter:</b> frida.holmer@hotmail.com
 				</li>
 				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> Leda
-					idégenerering och designprocess, säkerställa att webbplats och bidrag
-					är lätta att använda/uppleva.
-				</li>
-				<li>
-					<b class="creators">Länkar:</b>
+					<b class="creators">Vad vi bidragit med i projektet:</b> I rollen som
+					projektledare och UX Designer har jag fokuserat på att leda projektet
+					genom hela designprocessen samtidigt som jag har säkerställt att
+					produkten förmedlar en enhetlig upplevelse och är lätt att förstå och
+					använda. Tillsammans med manusförfattare och Game Artist har jag tagit
+					fram en story, som jag sedan testade på en användare för att se så att
+					storyn når fram. Tillsammans med våra två programmerare har jag sedan
+					arbetat på produktens layout och jag utförde i slutskedet ett
+					användbarhetstest för att säkerställa att produkten uppfyller våra
+					krav. Jag står även för berättarrösten.
 				</li>
 			</ul>
 			<br />
@@ -100,7 +121,8 @@
 					etc).
 				</li>
 				<li>
-					<b class="creators">Länkar:</b> https://github.com/linus-jonsson
+					<b class="creators">Länkar: </b
+					><a href="https://github.com/linus-jonsson" target="_blank">GitHub</a>
 				</li>
 			</ul>
 			<br />
