--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
 				<li>
 					<b class="creators">Länkar: </b
 					><a href="https://www.artstation.com/itsnoonytime" target="_blank">
-						ArtStation</a
+						<u>ArtStation</u></a
 					>
 				</li>
 			</ul>
@@ -70,8 +70,10 @@
 				</li>
 				<li>
 					<b class="creators">Länkar: </b
-					><a href="http://mogrim.se/" target="_blank">Domän</a> +
-					<a href="https://github.com/dantemogrim" target="_blank">GitHub</a>
+					><a href="http://mogrim.se/" target="_blank"><u>Domän</u></a> +
+					<a href="https://github.com/dantemogrim" target="_blank"
+						><u>GitHub</u></a
+					>
 				</li>
 			</ul>
 			<br />
@@ -122,7 +124,9 @@
 				</li>
 				<li>
 					<b class="creators">Länkar: </b
-					><a href="https://github.com/linus-jonsson" target="_blank">GitHub</a>
+					><a href="https://github.com/linus-jonsson" target="_blank"
+						><u>GitHub</u></a
+					>
 				</li>
 			</ul>
 			<br />
