--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 					<div id="unity-progress-bar-full"></div>
 				</div>
 			</div>
-			<!-- <div id="unity-mobile-warning">
-				-WebGL builds are not supported on mobile devices. 
+			<div id="unity-mobile-warning">
+				-WebGL builds are not supported on mobile devices.
 			</div>
-			<div id="unity-footer">
+			<!--  <div id="unity-footer">
 				<div id="unity-webgl-logo"></div>
 				<div id="unity-fullscreen-button"></div>
 				<div id="unity-build-title"> Sammanslaget </div>
