--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 			<a href="/about">Om Oss</a>
 			<a href="/faq">FAQ</a>
 		</nav>
-
 		<canvas id="unity-canvas"></canvas>
 		<div id="unity-loading-bar">
 			Laddar
@@ -30,6 +29,9 @@
 			<div id="unity-progress-bar-empty">
 				<div id="unity-progress-bar-full"></div>
 			</div>
+		</div>
+		<div id="unity-mobile-warning">
+			WebGL builds are not supported on mobile devices.
 		</div>
 		<script src="/assets/scripts/main.js"></script>
 	</body>
