Test to scale down canvas.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
 		</nav>
 		<canvas id="unity-canvas"></canvas>
 		<div id="unity-loading-bar">
-			Laddar
 			<div id="unity-logo"></div>
 			<div id="unity-progress-bar-empty">
 				<div id="unity-progress-bar-full"></div>
 			</div>
 		</div>
-		<div id="unity-mobile-warning">
+		<!-- <div id="unity-mobile-warning">
 			WebGL builds are not supported on mobile devices.
-		</div>
+		</div> -->
 		<script src="/assets/scripts/main.js"></script>
 	</body>
 </html>
