--- a/about/index.html
+++ b/about/index.html
@@ -33,17 +33,16 @@
 					<b class="creators">Kontaktuppgifter:</b> alicepersdotter@gmail.com
 				</li>
 				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> Vad vi
-					bidragit med i projektet: I detta projektet hade jag rollen som
-					grafiker, en roll som gav mig ansvaret att utveckla ett grafiskt
-					uttryck och stil, samt att skapa själva grafiken. Utifrån gruppens
-					koncept och författarens manus skissade jag upp en storyboard för att
-					visualisera vårt kommande arbete. Med dessa ursprungliga skisser som
-					bas, skapade jag sedan de miljöer, karaktärer och andra element som
-					illustrerar “Med Små Medel”. Förutom mitt arbete med färg och form för
-					att stärka vårt budskap så har jag samarbetat med UX samt
-					programmerare för att få fram ett grafiskt uttryck som är både
-					funktionellt och tilltalande.
+					<b class="creators">Vad vi bidragit med i projektet:</b> I detta
+					projektet hade jag rollen som grafiker, en roll som gav mig ansvaret
+					att utveckla ett grafiskt uttryck och stil, samt att skapa själva
+					grafiken. Utifrån gruppens koncept och författarens manus skissade jag
+					upp en storyboard för att visualisera vårt kommande arbete. Med dessa
+					ursprungliga skisser som bas, skapade jag sedan de miljöer, karaktärer
+					och andra element som illustrerar “Med Små Medel”. Förutom mitt arbete
+					med färg och form för att stärka vårt budskap så har jag samarbetat
+					med UX samt programmerare för att få fram ett grafiskt uttryck som är
+					både funktionellt och tilltalande.
 				</li>
 				<li>
 					<b class="creators">Länkar: </b
