--- a/about/index.html
+++ b/about/index.html
@@ -117,9 +117,8 @@
 					<b class="creators">Kontaktuppgifter:</b> linus_jonsson@hotmail.com
 				</li>
 				<li>
-					<b class="creators"> Vad vi bidragit med i projektet:</b> Utveckla
-					interaktivitet och implementera tillverkade delar (så som ljud, grafik
-					etc).
+					<b class="creators"> Vad vi bidragit med i projektet:</b> Utvecklat
+					interaktivitet och implementerat ljud, grafik etc.
 				</li>
 				<li>
 					<b class="creators">Länkar: </b
