--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 			</div>
 		</div>
 		<div id="unity-mobile-warning">
-			WebGL builds are not supported on mobile devices.
+			<p class="mobile-warning-text">
+				WebGL builds are not supported on mobile devices.
+			</p>
 		</div>
 		<script src="/assets/scripts/main.js"></script>
 	</body>
