Improved styling to the about site.

--- a/about/index.html
+++ b/about/index.html
@@ -14,120 +14,107 @@
 			<a href="/"
 				><h1>
 					Med
-					<div>små</div>
+					<div class="warmth">små</div>
 					Medel
 				</h1></a
 			>
 			<a class="warmth" href="/about">Om Oss</a>
 			<a href="/faq">FAQ</a>
 		</nav>
-		<article>
-			<h2>Om Oss</h2>
-
-			<p>Vi som ligger bakom projektet är:</p>
-			<br />
-			<ul>
-				<li><b class="creators">Namn:</b> Alice Persdotter Rydberg</li>
-				<li><b class="creators">Utbildning:</b> Game Creator Artist</li>
-				<li>
-					<b class="creators">Kontaktuppgifter:</b> alicepersdotter@gmail.com
-				</li>
-				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> I detta
-					projektet hade jag rollen som grafiker, en roll som gav mig ansvaret
-					att utveckla ett grafiskt uttryck och stil, samt att skapa själva
-					grafiken. Utifrån gruppens koncept och författarens manus skissade jag
-					upp en storyboard för att visualisera vårt kommande arbete. Med dessa
-					ursprungliga skisser som bas, skapade jag sedan de miljöer, karaktärer
-					och andra element som illustrerar “Med Små Medel”. Förutom mitt arbete
-					med färg och form för att stärka vårt budskap så har jag samarbetat
-					med UX samt programmerare för att få fram ett grafiskt uttryck som är
-					både funktionellt och tilltalande.
-				</li>
-				<li>
-					<b class="creators">Länkar: </b
-					><a href="https://www.artstation.com/itsnoonytime" target="_blank">
-						<u>ArtStation</u></a
-					>
-				</li>
-			</ul>
-			<br />
-			<ul>
-				<li><b class="creators">Namn:</b> Dante Mogrim</li>
-				<li><b class="creators">Utbildning:</b> Webbutvecklare</li>
-				<li><b class="creators">Kontaktuppgifter:</b> 1991.mogrim@gmail.com</li>
-				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> Jag har stått
-					för det innehållet som rör webben. Att vi har en about-sida där vi som
-					ligger bakom projektet har delat våra kontaktuppgifter. En faq-sida
-					dit användaren kan klicka in sig för att få svar på frågor kring
-					projektet. Allt vad gäller stylingen utanpå spelytan i form av
-					typsnitt, färg och form etc. Att projektet finns att tillgå på nätet.
-					Utöver min vanliga roll fick jag med min diktafon stå för inspelade
-					ljudmiljön som finns med i bakgrunden till spelet samt redigeringen av
-					dessa stycken.
-				</li>
-				<li>
-					<b class="creators">Länkar: </b
-					><a href="http://mogrim.se/" target="_blank"><u>Domän</u></a> +
-					<a href="https://github.com/dantemogrim" target="_blank"
-						><u>GitHub</u></a
-					>
-				</li>
-			</ul>
-			<br />
-			<ul>
-				<li><b class="creators">Namn:</b> Emma Malinsdotter</li>
-				<li><b class="creators">Utbildning:</b> Manusförfattare</li>
-				<li>
-					<b class="creators">Kontaktuppgifter:</b>
-					emma.malinsdotter@outlook.com
-				</li>
-				<li>
-					<b class="creators"> Vad vi bidragit med i projektet:</b> Har skrivit
-					manus och fört arbetet med att utveckla storyn utifrån gruppens
-					koncept.
-				</li>
-			</ul>
-			<br />
-			<ul>
-				<li><b class="creators">Namn:</b> Frida Holmer</li>
-				<li><b class="creators">Utbildning:</b> UX Designer</li>
-				<li>
-					<b class="creators">Kontaktuppgifter:</b> frida.holmer@hotmail.com
-				</li>
-				<li>
-					<b class="creators">Vad vi bidragit med i projektet:</b> I rollen som
-					projektledare och UX Designer har jag fokuserat på att leda projektet
-					genom hela designprocessen samtidigt som jag har säkerställt att
-					produkten förmedlar en enhetlig upplevelse och är lätt att förstå och
-					använda. Tillsammans med manusförfattare och Game Artist har jag tagit
-					fram en story, som jag sedan testade på en användare för att se så att
-					storyn når fram. Tillsammans med våra två programmerare har jag sedan
-					arbetat på produktens layout och jag utförde i slutskedet ett
-					användbarhetstest för att säkerställa att produkten uppfyller våra
-					krav. Jag står även för berättarrösten.
-				</li>
-			</ul>
-			<br />
-			<ul>
-				<li><b class="creators">Namn:</b> Linus Jonsson</li>
-				<li><b class="creators">Utbildning:</b> Game Creator Programmer</li>
-				<li>
-					<b class="creators">Kontaktuppgifter:</b> linus_jonsson@hotmail.com
-				</li>
-				<li>
-					<b class="creators"> Vad vi bidragit med i projektet:</b> Utvecklat
-					interaktivitet och implementerat ljud, grafik etc.
-				</li>
-				<li>
-					<b class="creators">Länkar: </b
-					><a href="https://github.com/linus-jonsson" target="_blank"
-						><u>GitHub</u></a
-					>
-				</li>
-			</ul>
-			<br />
+		<main>
+			<article class="noBackground">
+				<h2>Om Oss</h2>
+			</article>
+			<article>
+				<h3>Alice Persdotter Rydberg</h3>
+				<ul>
+					<li class="warmth">Game Creator Artist</li>
+					<li class="warmth">alicepersdotter@gmail.com</li>
+					<li>
+						I detta projektet hade jag rollen som grafiker, en roll som gav mig
+						ansvaret att utveckla ett grafiskt uttryck och stil, samt att skapa
+						själva grafiken. Utifrån gruppens koncept och författarens manus
+						skissade jag upp en storyboard för att visualisera vårt kommande
+						arbete. Med dessa ursprungliga skisser som bas, skapade jag sedan de
+						miljöer, karaktärer och andra element som illustrerar “Med Små
+						Medel”. Förutom mitt arbete med färg och form för att stärka vårt
+						budskap så har jag samarbetat med UX samt programmerare för att få
+						fram ett grafiskt uttryck som är både funktionellt och tilltalande.
+					</li>
+					<li>
+						<a href="https://www.artstation.com/itsnoonytime" target="_blank">
+							<u>ArtStation</u></a
+						>
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>Dante Mogrim</h3>
+				<ul>
+					<li class="warmth">Webbutvecklare</li>
+					<li class="warmth">1991.mogrim@gmail.com</li>
+					<li>
+						Jag har stått för det innehållet som rör webben. Att vi har en
+						about-sida där vi som ligger bakom projektet har delat våra
+						kontaktuppgifter. En faq-sida dit användaren kan klicka in sig för
+						att få svar på frågor kring projektet. Allt vad gäller stylingen
+						utanpå spelytan i form av typsnitt, färg och form etc. Att projektet
+						finns att tillgå på nätet. Utöver min vanliga roll fick jag med min
+						diktafon stå för inspelade ljudmiljön som finns med i bakgrunden
+						till spelet samt redigeringen av dessa stycken.
+					</li>
+					<li>
+						<a href="http://mogrim.se/" target="_blank"><u>Domän</u></a> +
+						<a href="https://github.com/dantemogrim" target="_blank"
+							><u>GitHub</u></a
+						>
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>Emma Malinsdotter</h3>
+				<ul>
+					<li class="warmth">Manusförfattare</li>
+					<li class="warmth">emma.malinsdotter@outlook.com</li>
+					<li>
+						Har skrivit manus och fört arbetet med att utveckla storyn utifrån
+						gruppens koncept.
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>Frida Holmer</h3>
+				<ul>
+					<li class="warmth">UX Designer</li>
+					<li class="warmth">frida.holmer@hotmail.com</li>
+					<li>
+						I rollen som projektledare och UX Designer har jag fokuserat på att
+						leda projektet genom hela designprocessen samtidigt som jag har
+						säkerställt att produkten förmedlar en enhetlig upplevelse och är
+						lätt att förstå och använda. Tillsammans med manusförfattare och
+						Game Artist har jag tagit fram en story, som jag sedan testade på en
+						användare för att se så att storyn når fram. Tillsammans med våra
+						två programmerare har jag sedan arbetat på produktens layout och jag
+						utförde i slutskedet ett användbarhetstest för att säkerställa att
+						produkten uppfyller våra krav. Jag står även för berättarrösten.
+					</li>
+				</ul>
+			</article>
+			<article>
+				<h3>Linus Jonsson</h3>
+				<ul>
+					<li class="warmth">Game Creator Programmer</li>
+					<li class="warmth">linus_jonsson@hotmail.com</li>
+					<li>Utvecklat interaktivitet och implementerat ljud, grafik etc.</li>
+					<li>
+						<a href="https://github.com/linus-jonsson" target="_blank"
+							><u>GitHub</u></a
+						>
+					</li>
+				</ul>
+			</article>
+		</main>
+		<article class="noBackground">
 			<p>
 				Detta är striktligen menat som ett skolprojekt där vi studerar på
 				<a href="https://www.yrgo.se/" target="_blank"><u>Yrgo</u></a
