--- a/faq/index.html
+++ b/faq/index.html
@@ -15,21 +15,24 @@
 			<a href="/"
 				><h1>
 					Med
-					<div>små</div>
+					<div class="warmth">små</div>
 					Medel
 				</h1></a
 			>
 			<a href="/about">Om Oss</a>
 			<a class="warmth" href="#">FAQ</a>
 		</nav>
-		<article>
+		<article class="noBackground">
 			<h2>FAQ</h2>
+		</article>
+		<article>
 			<h3>Hur spelar jag?</h3>
 			<p>
 				På förstasidan har du tillgång till spelet. För att spela, klicka dig
 				fram med hjälp av muspekaren.
 			</p>
-			<br />
+		</article>
+		<article>
 			<h3>Någonting som krånglar?</h3>
 			<p>
 				Försöker du spela via mobil eller surfplatta? Spelet är tyvärr bara
@@ -39,7 +42,8 @@
 				Laggar/fryser spelet? Testa att uppdatera ditt webbläsarfönster - det
 				kan vara spelmotorn som har hakat sig.
 			</p>
-			<br />
+		</article>
+		<article>
 			<h3>Vill du göra verklig skillnad?</h3>
 			<p>
 				I det här projektet har vi haft som mål att lyfta fram
